--- a/css/style.css
+++ b/css/style.css
@@ -308,6 +308,14 @@ a[href="javascript:;"] {
 .section-main label {
   text-decoration: underline;
 }
+.section-filter header {
+  display: flex;
+  align-items: baseline;
+}
+.section-filter .help {
+  flex: 1;
+  text-align: right;
+}
 .filter-items:empty::before {
   content: "No filters";
   display: block;
